# Habana_Custom_Kernel

./: CMakeLists.txt
hbits/: CMakeLists.txt  main.cpp  my_kern.c  tensor.h
